--- a/EIP's/EIP155.md
+++ b/EIP's/EIP155.md
@@ -1,1 +1,14 @@
-To be added
+#EIP155
+>EIP is the Ethereum Improvement Protocol is a design document provided to the Ethereum community with the sole purpose of introducing improvements to the network. It allows community members to contribute to the networks evolution.
+
+EIP155 was introduced to include chainId into the transaction to avoid replay attacks on the trascation on different chains, we can check the valid chainId for the network and previously update it accordingly.
+
+Find more on Replay attacks [Here](https://ethereum.stackexchange.com/questions/26/what-is-a-replay-attack)
+
+Previously `v=27` or `v=28` were valid but after[Spurious Dragon](https://github.com/ethereum/EIPs/blob/master/EIPS/eip-607.md) hardfork, things get a little changed.
+V was then calculated as `v = CHAIN_ID * 2 + 35` or `v = CHAIN_ID * 2 + 36` and if `Block_Number > FORK_BLKNUM` then instead of having only 6 paramenters in the transaction which are `(nonce, gasprice, startgas, to, value, data)` for hashing these six rlp encoded elements, now the transaction will include nine encoded elements to hash `(nonce, gasprice, startgas, to, value, data, chainid, 0, 0)` and the v is calculated as `v = {0,1} + CHAIN_ID * 2 + 35`. Previously calculated value i.e `v=27` or `v=28` will also be valid under the same rule.
+
+To know more about EIP155 do checkout [Etherem/EIP](https://github.com/ethereum/EIPs/blob/master/EIPS/eip-155.md)
+
+
+
